desc added, etc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!--
         Welcome to my website! I used Tailwind CSS to challenge myself in using a CSS library.
         I want to preface that class names are long because they are utility classes
-        because Tailwind works by using class names that correspond with CSS styles. 
+        because Tailwind works by using class names that correspond with CSS styles.
         In my style.css file, you will find that the CSS styling matches the class names.
     -->
 
@@ -17,7 +17,7 @@
         <header class="h-18 bg-alphagray rounded-full m-4 flex flex-row justify-between shadow-xl
         hover-bg-alphablack hover-m-up transition duration-300 ease-in-out">
             <h1 class="text-3xl p-4 text-white"><a href="index.html">amiya saha</a></h1>
-            <img src="images/header.png">
+            <img src="images/header.png" alt="tricolor logo for website">
             <h1 class="text-3xl text-white underline p-4 hover-text-green-500"><a href="contact.html">contact</a></h1>
         </header>
         <main class="grid grid-cols-2 gap-4 m-20 ">
@@ -33,13 +33,13 @@
                 </p>
             </div>
             <aside class="flex flex-col gap-4">
-                <h1 class="bg-alphagray rounded-full text-white text-center shadow-xl">
-                <span>opinions!</span>
-                </h1>
-                <h2 class="bg-alphagray text-2xl rounded-full text-white p-2 shadow-xl">ranking all
+                <h2 class="bg-alphagray rounded-full text-white text-center shadow-xl">
+                <span>my random opinions ig?</span>
+                </h2>
+                <h3 class="bg-alphagray text-2xl rounded-full text-white p-2 shadow-xl">ranking all
                     <a href="https://en.wikipedia.org/wiki/Calpis" class="underline decoration-green-500
                     hover-text-green-500">calpico</a> flavors
-                </h2>
+                </h3>
                 <ol class="bg-alphagray rounded-md text-white px-6 list-decimal shadow-xl">
                     <li>Mango</li>
                     <li>Lychee</li>
@@ -49,8 +49,21 @@
                     <li>White Peach</li>
                 </ol>
                 <h2 class="bg-alphagray rounded-full text-white text-2xl p-2">
-                    top 10 roblox games
+                    best <a href="https://www.gmk.net/en/about-gmk/history"
+                    class="decoration-green-500 underline hover-text-green-500">
+                    gmk</a> keycap sets (no particular order)
                 </h2>
+                <ul class="bg-alphagray rounded-md px-6 text-white shadow-xl list-disc">
+                    <li>gmk 8008s</li>
+                    <li>gmk striker</li>
+                    <li>gmk court</li>
+                    <li>gmk blue samurai</li>
+                    <li>gmk mizu</li>
+                    <li>gmk lazer</li>
+                </ul>
+                <div class="bg-alphagray rounded-full text-white text-2xl p-2">
+                    best place on earth: moses lake <p class="text-xs inline">...jk.</p>
+                </div>
             </aside>
         </main>
         <footer class="relative bottom-0 justify-center text-white pt-20 flex
